--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "hyperhtml": "^2.10.3",
+    "onpushstate": "^0.3.0",
     "viperhtml": "^2.13.1"
   },
   "devDependencies": {
